--- a/uzza-tech/functions/package.json
+++ b/uzza-tech/functions/package.json
@@ -15,6 +15,8 @@
   "main": "index.js",
   "dependencies": {
     "@google-cloud/storage": "^5.8.5",
+    "@stripe/react-stripe-js": "^1.4.1",
+    "@stripe/stripe-js": "^1.15.1",
     "firebase-admin": "^9.9.0",
     "firebase-functions": "^3.14.1"
   },
